# tee-vm

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/rust/: Cargo.toml
app/rust/src/: lib.rs
app/src/androidTest/java/xyz/proofcast/tee_vm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/xyz/proofcast/tee_vm/: MainActivity.kt
app/src/main/java/xyz/proofcast/tee_vm/data/: Proof.kt  ProofAndroid.kt  ProofAndroidValue.kt
app/src/main/java/xyz/proofcast/tee_vm/security/: AttestationCertificate.kt  TrustedExecutor.kt  Utils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/xyz/proofcast/tee_vm/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
